--- a/butter/Base.lproj/Main.storyboard
+++ b/butter/Base.lproj/Main.storyboard
@@ -51,7 +51,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="NxI-qg-DHy">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="MenuCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="MenuCell" id="l0L-fd-XJd" customClass="MenuCell" customModule="butter" customModuleProvider="target">
@@ -84,8 +84,8 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="nR3-B0-5pJ" firstAttribute="top" secondItem="NxI-qg-DHy" secondAttribute="bottom" id="5ne-oO-K2j"/>
+                            <constraint firstItem="NxI-qg-DHy" firstAttribute="top" secondItem="k3y-Qx-6I3" secondAttribute="bottom" id="6cZ-t1-A7s"/>
                             <constraint firstAttribute="trailing" secondItem="NxI-qg-DHy" secondAttribute="trailing" id="NnI-7J-H85"/>
-                            <constraint firstItem="NxI-qg-DHy" firstAttribute="top" secondItem="oGf-Oa-yfd" secondAttribute="top" id="fTv-H4-7O8"/>
                             <constraint firstItem="NxI-qg-DHy" firstAttribute="leading" secondItem="oGf-Oa-yfd" secondAttribute="leading" id="wiU-ee-fO8"/>
                         </constraints>
                     </view>
